# novale

./: AUTHORS  COPYING  Makefile.am  README  RecordTimer.py  ServiceReference.py  aa  configure.ac  doxy.conf  enigma2.bb  skin.py
box/: box_formule3.py  box_formuler3.py  box_spycat.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  skin.xml  skin_default.xml  skin_default.xml_antiguo  skin_display_gb800ue.xml  skin_display_gbquadplus.xml  startwizard.xml
data/displaytext/: Makefile.am  skin_display.xml
data/fonts/: Makefile.am
data/lcd_skin220/: Makefile.am  active  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_2.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_2.xml  skin_lcd_picon_3.xml  skin_lcd_picon_4.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml
data/lcd_skin400/: Makefile.am  skin_lcd_default.xml  skin_lcd_no_picon_1.xml  skin_lcd_no_picon_2.xml  skin_lcd_picon.xml  skin_lcd_picon_1.xml  skin_lcd_picon_2.xml  skin_lcd_picon_3.xml  skin_lcd_picon_4 _analog_gb.xml  skin_lcd_picon_4 _analog_red.xml  skin_lcd_picon_4 _analog_toroto.xml  skin_lcd_picon_4 _analog_toroto1.xml  skin_lcd_picon_4 _analog_toroto2.xml  skin_lcd_picon_4.xml  skin_lcd_picon_4_analog_rail.xml  skin_lcd_picon_5.xml  skin_lcd_picon_6.xml
data/rc_models/: Makefile.am  rc_models.cfg
data/sfpanel/: Makefile.am
doc/: configure.ac
lib/dvb/: epgcache.cpp  epgcache.h
lib/dvb/lowlevel/: mhw.h
lib/gdi/: fblcd.h  lcd.cpp
lib/python/Components/: Lcd.py  Makefile.am  Network.py  SystemInfo.py  TimerSanityCheck.py  UsageConfig.py
lib/python/Components/Converter/: CamdRAED.py  MaggyEventName.py  Makefile.am  MemoryInfo.py  RouteInfo.py  VAudioInfo.py_antiguo  barraprogreso
lib/python/Components/Renderer/: MaggyRunningText.py  MaggyRunningText.py_antiguo  Makefile.am  MaxTemp.py  NextEvents.py_antiguo  OMaClockLcd.py  PiconLCD.py  RollerCharLCD.py
lib/python/Components/Sources/: MSNWeather.py  Makefile.am
lib/python/Plugins/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/YouTube/: OAuth.pyo  YouTubeApi.pyo  YouTubeDownload.pyo  YouTubeSearch.pyo  YouTubeUi.pyo  YouTubeVideoUrl.pyo  __init__.pyo  jsinterp.pyo  plugin.pyo  swfinterp.pyo
lib/python/Plugins/Extensions/YouTube/locale/lv/LC_MESSAGES/: YouTube.mo
lib/python/Plugins/Extensions/YouTube/locale/ru/LC_MESSAGES/: YouTube.mo
lib/python/Plugins/SFteam/: Makefile.am
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: imagewizard.xml
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py
lib/python/Screens/: About.py  Backup.py  Backup.py_antiguo  CamControl.py  CardControl.py  CardPanel.py  CardPanel.py_antiguo  Console.py  Flash.py  InfoBar.py  InfoBarGenerics.py  InputDeviceSetup.py  InstallWizard.py  LanguageSelection.py  Makefile.am  Makefile_sin_skins.am  Mediatomb.py  MessageBox.py_antiguo  MessageBoxSF.py  Mount.py  Password.py  Password.py_antiguo  SFPanel.py  SFPanel.py_antiguo  SFepg.py  SFextra.py  Satconfig.py  SoftPanel.py  SoftPanel.py_antiguo  SoftwareUpdate.py  SpeedTest.py  Standby.py  Tuner.py  Update.py  fullbackup.py  minstall.py  sfupgrade.py
lib/python/Screens/images/: Makefile.am
lib/python/Screens/skins/: Makefile.am  menu_sd.xml
lib/python/Tools/: Directories.py  HardwareInfo.py  Profile.py
lib/service/: Makefile.inc  iservice.h  servicedvbrecord.h  servicehdmi.h  servicemp3.cpp  servicemp3.h  servicemp3record.cpp  servicemp3record.h
main/: bsod.cpp
po/: es.po
tools/: Makefile.am  backup.in
