SUBDIRS =  skins images

installdir = $(pkglibdir)/python/Screens

install_PYTHON = \
	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py CopyFiles.py InfoBar.py SFextra.py \
	Menu.py	MessageBox.py Screen.py ServiceScan.py TimerEdit.py sfupgrade.py \
	MovieSelection.py Setup.py About.py HarddiskSetup.py FixedMenu.py \
	Satconfig.py ScanSetup.py NetworkSetup.py Ci.py TimerEntry.py Volume.py \
	EpgSelection.py EventView.py Mute.py Standby.py ServiceInfo.py \
	InfoBarGenerics.py HelpMenu.py Wizard.py __init__.py \
	Dish.py LanguageSelection.py StartWizard.py PiPSetup.py \
	PluginBrowser.py MinuteInput.py Scart.py PVRState.py \
	Console.py InputBox.py ChoiceBox.py SimpleSummary.py \
	TimerSelection.py PictureInPicture.py TimeDateInput.py \
	SubtitleDisplay.py SubservicesQuickzap.py ParentalControlSetup.py NumericalTextInputHelpDialog.py \
	SleepTimerEdit.py Ipkg.py RdsDisplay.py Globals.py \
	SessionGlobals.py LocationBox.py WizardLanguage.py TaskView.py Rc.py VirtualKeyBoard.py \
	TextBox.py FactoryReset.py RecordPaths.py UnhandledKey.py ServiceStopScreen.py \
	InputDeviceSetup.py DVD.py SoftwareUpdate.py AutoDiseqc.py InstallWizard.py ScreenSaver.py \
	Hotkey.py LcdClockSelector.py LcdSkinSelector.py Backup.py CamControl.py CardControl.py \
	CardPanel.py Cron.py Flash.py Mediatomb.py MessageBoxSF.py Mount.py Password.py SFepg.py SFPanel.py SoftPanel.py SpeedTest.py Tuner.py Update.py