installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py Streaming.py MemoryInfo.py \
	StaticMultiList.py ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py VAudioInfo.py \
	ServiceOrbitalPosition.py CryptoInfo.py TextCase.py barraprogreso.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py TemplatedMultiContent.py ProgressToText.py ServiceName2.py \
	Combine.py SensorToText.py OMaclock.py ValueToPixmap.py PliExtraInfo.py genre.py TransponderInfo.py \
	RotorPosition.py CaidInfo2.py CamdRAED.py FanTempInfo.py MaggyEventName.py MSNWeather.py RouteInfo.py