installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py NextEvents.py MSNWeatherPixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py Picon.py Pig.py MaggyRunningText.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py AudioIcon.py \
	OMaClockLcd.py OMMetrixWeatherWidget.py OMNextEvent.py PiconLCD.py \
	PiconRes.py PiconX.py RunningText.py Volume2Text.py    