installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py AudioIcon.py MaggyRunningText.py \
	FixedLabel.py PositionGauge.py Canvas.py Picon.py Pig.py MSNWeatherPixmap.py NextEvents.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py \
	OMaClockLcd.py OMMetrixWeatherWidget.py OMNextEvent.py PiconLCD.py \
	PiconRes.py PiconX.py RunningText.py Volume2Text.py